--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6,3.8,3.12]
+        python-version: [3.12]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -33,5 +33,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Run hello.py
-        run: python3 ./hello.py
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip3 install -r requirements.txt; fi
+          # urllib3 에서 six 모듈 지원이 중단되어, 1.x 버전을 사용하도록 재설치
+          pip3 uninstall -y urllib3
+          pip3 install "urllib3<2"
+      - name: Run main.py
+        run: |
+          python3 main.py
+        env:
+          MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
